# LenonDev

./: .gitignore  Cargo.toml  localhost-key.pem  localhost.pem  save.html  save.save  tailwind.config.js
migrations/: 20250713195711_create_projects_table.sql  20250714124103_create_articles_table.sql  20250715162512_create_project_images_table.sql  20250715170400_create_users_table.sql  20250721110417_add_slug_to_projects.sql
src/: appstate.rs  main.rs  models.rs
src/components/: admin.rs  blog.rs  blog_cms.rs  cookies.rs  cta.rs  custom_project.rs  ecommerce.rs  footer.rs  home_page.rs  hosting.rs  landing_page.rs  layout.rs  maintenance.rs  mod.rs  offer.rs  post_page.rs  privacy.rs  sections.rs  seo_optimization.rs  simple_site.rs  web_app.rs
src/handlers/: admin.rs  blog.rs  blog_cms.rs  contact.rs  custom_project.rs  ecommerce.rs  error.rs  hosting.rs  htmx.rs  landing_page.rs  maintenance.rs  mod.rs  offer.rs  privacy.rs  projects.rs  seo.rs  seo_optimization.rs  simple_site.rs  static_pages.rs  uses.rs  web_app.rs
src/routes/: home.rs  mod.rs
static/: background.avif  fixed-logo.avif  index.html  main.css  map-placeholder.avif  output.css  robots.txt  style.css
static/projects/: panel1-400w.avif  panel1.avif  panel2.avif  panel3.avif  panel4.avif  panel5.avif  panel6.avif  project1-2.avif  project1-3.avif  project1-4.avif  project1-5.avif  project1.avif  project2-2.avif  project2-3.avif  project2-4.avif  project2.avif  shop1-400w.avif  shop1.avif  shop2.avif  shop3-400w.avif  shop3.avif  shop4.avif  shop5-400w.avif  shop5.avif  shop6.avif  shop7-400w.avif  shop7.avif  shop8.avif  tzmoauu4rgagyjpojvwf.avif
static/projects/thumbnails/: panel4-400w.avif  panel5-400w.avif  shop2-400w.avif  shop4-400w.avif  shop9-400w.avif
static/projects/thumbnails/project1-shop/: shop6-400w.avif  shop8-400w.avif
static/projects/thumbnails/project2-panel/: panel2-400w.avif  panel3-400w.avif
