[package]
name = "lenondev_portfolio"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["http2", "macros"] }
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
dotenvy = "0.15.7"
maud = { version = "0.27.0", features = ["axum"] }
rustls = { version = "0.23.29", features = ["ring"] }
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1.46.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs", "full"] }
