[package]
name = "lenondev_portfolio"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
axum = { version = "0.8.4", features = ["http2", "macros"] }
axum-extra = { version = "0.10.1", features = ["multipart"] }
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
maud = { version = "0.27.0", features = ["axum"] }
moka = { version = "0.12.10", features = ["sync"] }
pulldown-cmark = "0.13.0"
resend-rs = { version = "0.15.0", features = ["rustls-tls"] }
rustls = { version = "0.23.29", features = ["aws_lc_rs", "ring"] }
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
serde_json = "1.0.140"
slug = "0.1.6"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
tokio = { version = "1.46.1", features = ["full"] }
tower-cookies = "0.11.0"
tower-http = { version = "0.6.6", features = ["fs", "full"] }
tower-sessions = "0.14.0"
tracing = { version = "0.1.41", features = ["async-await"] }


[profile.release]
opt-level = 3         # Maksymalna optymalizacja (domyślna)
lto = true            # Link Time Optimization
codegen-units = 1     # Lepsza optymalizacja, wolniejsze kompilowanie
panic = "abort"       # Mniejszy rozmiar binarki, brak śladów paniki
strip = true          # Usunięcie symboli debugowania (wymaga nightly albo ręcznie)
